@@ -1,5 +1,14 @@
 # GRAPH-moment
 
-App uses JDK11 and javafx-sdk-11.0.2
-
-JFX installation tutorial: [https://openjfx.io/openjfx-docs/](https://openjfx.io/openjfx-docs/)
+### Environment setup:
+1. Clone the repo.
+    ```
+    git clone https://github.com/mtdrewski/GRAPH-moment
+    ```
+2. Open GRAPH-moment.iml in IntelliJ IDEA .
+3. Add following to VM options in run configuration.
+    ```
+    --module-path <path to repo>/GRAPH-moment/libs/javafx-sdk-11.0.2/lib --add-modules javafx.controls,javafx.fxml
+    ```
+4. Go to Project Structure>Project Settings>Project>Project SDK and download JDK Amazon Corretto 11.0.
+5. Run Main.java class.
